import 'package:flutter/material.dart';

class TryListScreen extends StatelessWidget {
  const TryListScreen({super.key});
  @override
  Widget build(BuildContext context) =>
      const Scaffold(body: Center(child: Text('Try List')));
}
